# Car-Management-Erpnext

./: README.md
vehicle_management/vehicle_management/: README.md  pyproject.toml
vehicle_management/vehicle_management/vehicle_management/: hooks.py
vehicle_management/vehicle_management/vehicle_management/config/: desktop.py  vehicle_management.py
vehicle_management/vehicle_management/vehicle_management/vehicle_management/doctype/auction_grade/: auction_grade.js  auction_grade.json  auction_grade.py  test_auction_grade.py
vehicle_management/vehicle_management/vehicle_management/vehicle_management/doctype/car_model/: car_model.js  car_model.json  car_model.py  test_car_model.py
vehicle_management/vehicle_management/vehicle_management/vehicle_management/doctype/model_year/: model_year.js  model_year.json  model_year.py  test_model_year.py
vehicle_management/vehicle_management/vehicle_management/vehicle_management/doctype/vehicle_availability/: test_vehicle_availability.py  vehicle_availability.js  vehicle_availability.json  vehicle_availability.py
vehicle_management/vehicle_management/vehicle_management/vehicle_management/doctype/vehicle_details/: test_vehicle_details.py  vehicle_details.js  vehicle_details.json  vehicle_details.py
vehicle_management/vehicle_management/vehicle_management/vehicle_management/doctype/vehicle_price/: test_vehicle_price.py  vehicle_price.js  vehicle_price.json  vehicle_price.py
vehicle_management/vehicle_management/vehicle_management/vehicle_management/report/vehicle_details_report/: vehicle_details_report.js  (+1 more)
